# ML-Intrusion-Detection

./: .gitignore  Future Planning  IntrusionDetection.ipynb  README.md  Untitled14.ipynb  intial.ipynb  main.cpp  req.txt
DesktopApp/: CMakeLists.txt  DesktopApp.cpp  DesktopApp.h
DesktopApp/src/: main.cpp  xgboost_ids_model2.json
DesktopApp/src/common/: packet_types.h
DesktopApp/src/engine/: batch_manager.h  data_loader.cpp  data_loader.h  preprocessor.cpp  preprocessor.h
DesktopApp/src/gui/: mainwindow.cpp  mainwindow.h
DesktopApp/src/parallel/: mpi_engine.cpp  mpi_engine.h
code/: IDS_final.ipynb  intial.ipynb  pipeline.ipynb  re-engineering.ipynb  serial.cpp
